# c2425-R4sw

./: .dockerignore  .gitignore  CalculaFilaP2Dif.py  Dockerfile  PasarAP2Difdf.py  README.md  main.py  pyproject.toml
data/: imagenes.json  peleas.parquet
models/: modelP1.xgb  modelP2.xgb  xgboost_P1.joblib  xgboost_P2.joblib
src/: main.py
static/: POSTP1.html  POSTP2.html  PrediccionP1.html  testGETP2.html
static/css/: style.css  style_P2.css  styles_P1.css  styles_P2.css
static/js/: modelo_P1.js  modelo_P2.js
templates/: base.html  footer.html  header.html  index.html  inicio.html  modelo_P1.html  modelo_P2.html  navbar.html  predictP1.html  predictP2.html  response.html
