[project]
name = "c2425-r4sw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.6",
    "joblib>=1.4.2",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "python-multipart>=0.0.20",
    "xgboost>=3.0.0",
]
